--- a/frontend/webapp/package.json
+++ b/frontend/webapp/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "chance": "^1.1.7",
     "firebase": "^8.0.0",
     "flux": "^3.1.3",
     "react": "^17.0.1",
